# Panorama

./: CMakeLists.txt  MSOP.cpp  blending_alpha.cpp  blending_direct.cpp  blending_photomontage.cpp  blending_photomontage_ver1.cpp  blending_poisson.cpp  focal_length.py  focal_px_out.txt
archive/build_0/: CMakeCache.txt  MSOP  ba_pcg  blending_alpha  blending_direct  blending_photomontage  cmake_install.cmake
archive/build_1/: CMakeCache.txt  Makefile  blending_direct  blending_photomontage  blending_poisson  solver_log.csv
archive/build_2/: CMakeCache.txt  MSOP  Makefile  blending_direct  cmake_install.cmake  solver_log.csv  test
archive/build_3/: CMakeCache.txt  Makefile  blending_alpha  blending_direct  blending_graphcut  blending_poisson  solver_log.csv  test
clean_build/: Makefile  blending_graphcut  blending_poisson
logs/: gmean_per_config.csv  log_field.csv  log_gj.csv  log_malibu.csv  log_sh.csv  parser.py
resources/apron/: img_list.txt
resources/field/: img_list.txt
resources/grandesjorasses/: img_list.txt
resources/malibu/: img_list.txt
resources/shanghai/: img_list.txt
temp/: metadata.txt
temp_ap/: metadata.txt
temp_gj/: metadata.txt
temp_sh/: metadata.txt
